k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codingturf-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - codingturf.in
        - www.codingturf.in
      secretName: codingturf-tls
    - hosts:
        - api.codingturf.in
      secretName: codingturf-api-tls
  rules:
    - host: codingturf.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codemonfront-web
                port:
                  number: 80
    - host: www.codingturf.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codemonfront-web
                port:
                  number: 80
    - host: api.codingturf.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codemon-api
                port:
                  number: 80
